--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   intl: ^0.18.0
   file_picker: ^5.2.11
   dots_indicator: ^2.1.0
+  curved_navigation_bar: ^1.0.3 
   # fluttertoast: ^8.1.2
   # flutter_secure_storage: ^7.0.1
   #  device_info_plus: ^8.0.0
